package edu.fiuba.algo3.modelo;


interface Bloque {

    void ejecutar(Personaje personaje);

    Bloque opuesto();


}
